--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^5.1.2"
+drf-yasg = "^1.21.8"
+django-rest-swagger = "^2.2.0"
+djangorestframework = "^3.15.2"
 
 
 [build-system]
