--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.2"
 drf-yasg = "^1.21.8"
 django-rest-swagger = "^2.2.0"
 djangorestframework = "^3.15.2"
+django-ninja = "^1.3.0"
 
 
 [build-system]
